--- a/dashboard/src/App122.css
+++ b/dashboard/src/App122.css
@@ -1,5 +1,9 @@
 .App {
   text-align: center;
+  height: 650px;
+  width: 1500px;
+  padding-left: 20px;
+
 }
 
 .App-logo {
@@ -19,7 +23,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: left;
   font-size: calc(10px + 2vmin);
   color: white;
 }
